Adicionado rota clouds + correções
