# api/src/routes.js
@@ -1,21 +1,32 @@
 const express = require('express');
 
-const { getPrecipitation, getEvaporation } = require('./mateomatics.service');
+const { getPrecipitation, getEvaporation, getClouds } = require('./mateomatics.service');
 
 const routes = express();
 
 routes.get('/precipitation/lat/:lat/long/:long', async (req, res) => {
     const { lat, long } = req.params;
+    const { format } = req.query;
 
-    const result = await getPrecipitation(lat, long);
+    const result = await getPrecipitation(lat, long, format);
 
     return res.status(200).send(result)
 })
 
 routes.get('/evaporation/lat/:lat/long/:long', async (req, res) => {
     const { lat, long } = req.params;
+    const { format } = req.query;
 
-    const result = await getEvaporation(lat, long);
+    const result = await getEvaporation(lat, long, format);
+
+    return res.status(200).send(result)
+})
+
+routes.get('/clouds/lat/:lat/long/:long', async (req, res) => {
+    const { lat, long } = req.params;
+    const { format } = req.query;
+
+    const result = await getClouds(lat, long, format);
 
     return res.status(200).send(result)
 })
